fixed redis bug